changed contact email

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="mailto:fedor@cirruslabs.org">
+          <a href="mailto:hello@cirruslabs.org">
             <i class="fa fa-envelope fa-3x cirrus-white" aria-hidden="true"></i>
           </a>
         </li>
