--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cirrus Labs</title>
 
+    <!-- Redirect to Cirrus CI until we have a proper site -->
+    <meta http-equiv="refresh" content="0; url=https://cirrus-ci.org">
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -35,6 +38,7 @@
       <div class="row h-100">
         <div class="col-sm-5"></div>
         <div class="col-sm-2 d-flex align-items-center">
+          <h1>Cirrus Labs</h1>
           <img src="cirrus-logo.svg" class="w-100" />
         </div>
         <div class="col-sm-5"></div>
