--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item pr-3">
           <a href="https://github.com/cirruslabs">
-            <i class="fa fa-github fa-3x cirrus-white " aria-hidden="true"></i>
+            <i class="fa fa-github fa-3x cirrus-white" aria-hidden="true"></i>
           </a>
         </li>
         <li class="nav-item">
@@ -38,7 +38,8 @@
       <div class="row h-100">
         <div class="col-sm-5"></div>
         <div class="col-sm-2 d-flex align-items-center">
-          <img src="cirrus-logo.svg" class="w-100" />         
+          <h1>Cirrus Labs</h1>
+          <img src="cirrus-logo.svg" class="w-100" />
         </div>
         <div class="col-sm-5"></div>
       </div>  
