--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
       <img src="cirrus-logo.svg" />
       <h1>Cirrus Labs</h1>
       <h2>Products</h2>
-      <ul class="body-text">
+      <ul class="body-text" style="list-style-type: none">
         <li>
           <a href="https://cirrus-ci.org">Cirrus CI</a>
-          <abbr><b>~</b> Cirrus Labs' flagship product, a modern, cloud native approach to continuous integration</abbr>
+          <abbr><b>—</b> Cirrus Labs' flagship product, a modern, cloud native approach to continuous integration</abbr>
         </li>
         <li>
-          <a href="https://github.com/cirrus-actions">Cirrus Actions</a>
-          <abbr><b>~</b> A series of GitHub actions developed and maintained by Cirrus Labs to enhance your workflows</abbr>
+          <a href="https://tart.run/">Tart</a>
+          <abbr><b>—</b> a virtualization toolset to build, run and manage macOS and Linux virtual machines on Apple Silicon.</abbr>
         </li>
         <li>
-          <a href="https://cirrus-emulators.com">Cirrus Emulators</a>
-          <abbr><b>~</b> Run Android emulators in your existing CI provider, with minimal configuration needed</abbr>
+          <a href="https://tart.run/github-actions/">Cirrus Runners</a>
+          <abbr><b>—</b> On-demand runners for GitHub Actions powered by Tart. Apple Silicon chips provide 2-3 times better performance comparing to GitHub's own Intel runners.</abbr>
         </li>
       </ul>
     </div>
