--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
       <h2>Products</h2>
       <ul class="body-text" style="list-style-type: none">
         <li>
-          <a href="https://cirrus-ci.org">Cirrus CI</a>
-          <abbr><b>—</b> Cirrus Labs' flagship product, a modern, cloud native approach to continuous integration</abbr>
+          <a href="https://cirrus-runners.app//">Cirrus Runners</a>
+          <abbr><b>—</b> macOS, Linux arm64 and Linux x64 managed runners for your GitHub Actions for a fixed price regardless of the usage.</abbr>
         </li>
         <li>
           <a href="https://tart.run/">Tart</a>
           <abbr><b>—</b> a virtualization toolset to build, run and manage macOS and Linux virtual machines on Apple Silicon.</abbr>
         </li>
         <li>
-          <a href="https://tart.run/github-actions/">Cirrus Runners</a>
-          <abbr><b>—</b> On-demand runners for GitHub Actions powered by Tart. Apple Silicon chips provide 2-3 times better performance comparing to GitHub's own Intel runners.</abbr>
+          <a href="https://cirrus-ci.org">Cirrus CI</a>
+          <abbr><b>—</b> a modern approach to continuous integration.</abbr>
         </li>
       </ul>
     </div>
