--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h2>Products</h2>
       <ul class="body-text" style="list-style-type: none">
         <li>
-          <a href="https://cirrus-runners.app//">Cirrus Runners</a>
+          <a href="https://cirrus-runners.app/">Cirrus Runners</a>
           <abbr><b>—</b> macOS, Linux arm64 and Linux x64 managed runners for your GitHub Actions for a fixed price regardless of the usage.</abbr>
         </li>
         <li>
@@ -43,7 +43,7 @@
           <abbr><b>—</b> a virtualization toolset to build, run and manage macOS and Linux virtual machines on Apple Silicon.</abbr>
         </li>
         <li>
-          <a href="https://cirrus-ci.org">Cirrus CI</a>
+          <a href="https://cirrus-ci.org/">Cirrus CI</a>
           <abbr><b>—</b> a modern approach to continuous integration.</abbr>
         </li>
       </ul>
